<resources>
    <string name="app_name">MVP_registro</string>
    <string name="label_date">Data</string>
    <string name="label_detail">Descrição</string>
    <string name="label_value">R$ 0,00</string>
    <string name="label_description_new_register">Novo registro</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_profit">Recebimentos</string>
    <string name="label_expense">Despesas</string>
    <string name="label_show_success">Registro Cadastrado!</string>
</resources>