<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_hamburguer"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_lay"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="128dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_profit" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_expense" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_detail"
        app:layout_constraintTop_toBottomOf="@id/tab_lay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:startIconDrawable="@drawable/ic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        android:hint="@string/label_date"
        app:startIconDrawable="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/til_detail"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/til_date"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:startIconDrawable="@drawable/ic_money"
        android:hint="@string/label_value">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        app:icon="@drawable/ic_done"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Finalizar Registro"/>



</androidx.constraintlayout.widget.ConstraintLayout>